# fcpxml-subtitle-generator

./: .gitignore  LICENSE  README.md  bump_version.py  main.py  pyproject.toml  subtitle_generator.py
.github/workflows/: publish.yml
fcpxml_subtitle_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
subtitle_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
