[project]
name = "subtitle-automation"
version = "0.1.0"
description = "CLI tool to generate Final Cut Pro compatible subtitle files from audio/video files using Whisper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moviepy>=2.2.1",
    "openai-whisper>=20250625",
]

[project.scripts]
subtitle-gen = "subtitle_generator:main"

[tool.setuptools]
py-modules = ["subtitle_generator"]
